# SinglePassChorus

app/: build.gradle
app/src/androidTest/java/io/agora/rtc/SinglePassChorus/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/io/agora/rtc/SinglePassChorus/: AudienceActivity.java  BroadcasterAActivity.java  BroadcasterBActivity.java  ConstantsApp.java  MainActivity.java
app/src/main/java/io/agora/rtc/SinglePassChorus/utils/: AppUtil.java
app/src/main/res/layout/: activity_audience.xml  activity_broadcaster_a.xml  activity_broadcaster_b.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/agora/rtc/SinglePassChorus/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
raw-data-api-java/: CMakeLists.txt  build.gradle
raw-data-api-java/src/main/cpp/: apm-plugin-video-raw-data.cpp
raw-data-api-java/src/main/cpp/other/: media_preprocessing_plugin_jni.cpp
raw-data-api-java/src/main/java/io/agora/rtc/plugin/rawdata/: MediaDataAudioObserver.java  MediaDataObserverPlugin.java  VideoRawDataApi.java
